--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 		"@reduxjs/toolkit": "^1.8.5",
 		"axios": "^0.27.2",
 		"firebase": "^9.10.0",
-		"netlify-cli": "^11.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.37.0",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
