--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@fontsource/roboto": "^4.5.8",
+		"@mui/icons-material": "^5.10.9",
+		"@mui/material": "^5.10.9",
 		"@reduxjs/toolkit": "^1.8.5",
 		"axios": "^0.27.2",
 		"firebase": "^9.10.0",
@@ -12,7 +17,6 @@
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
-		"tw-elements": "^1.0.0-alpha12",
 		"uid": "^2.0.0"
 	},
 	"scripts": {
