--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
 		"@emotion/styled": "^11.10.4",
 		"@fontsource/roboto": "^4.5.8",
 		"@mui/icons-material": "^5.10.9",
+		"@mui/lab": "^5.0.0-alpha.103",
 		"@mui/material": "^5.10.9",
+		"@mui/x-date-pickers": "^5.0.4",
 		"@reduxjs/toolkit": "^1.8.5",
 		"axios": "^0.27.2",
+		"date-fns": "^2.29.3",
 		"firebase": "^9.10.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-scripts": "^5.0.1",
 		"react-hook-form": "^7.37.0",
+		"react-hook-form-mui": "^5.7.2",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
 		"uid": "^2.0.0"
 	},
 	"scripts": {
