--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 		"firebase": "^9.10.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1",
 		"react-hook-form": "^7.37.0",
 		"react-hook-form-mui": "^5.7.2",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
+		"react-scripts": "^5.0.1",
+		"recharts": "^2.1.16",
 		"uid": "^2.0.0"
 	},
 	"scripts": {
